# RustLike

./: README.md
backend/: Cargo.toml
backend/src/: enemy.rs  entity.rs  item.rs  lib.rs  player.rs
frontend/: Cargo.toml
frontend/src/: Map.rs  character_portrait.rs  dialogue_box.rs  inventory_display.rs  lib.rs  map.rs  options_display.rs
fundamentals/src/: position.rs
game/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: main.rs  runtime_data.rs
