[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = {path="../backend"}
crossterm = "0.25.0"
frontend = {path="../frontend"}
fundamentals = {path="../fundamentals"}
indexmap = "1.9.1"
rand = "0.8.5"
